@@ -802,6 +802,8 @@ void shoes_ruby_init() {
     rb_define_method(cApp, "decorated", CASTHOOK(shoes_app_get_decoration), 0);
     rb_define_method(cApp, "decorated=", CASTHOOK(shoes_app_set_decoration), 1);
     rb_define_alias(cApp, "decorated?", "decorated");
+    rb_define_method(cApp, "cache", CASTHOOK(shoes_app_get_cache), 0);
+    rb_define_method(cApp, "cache=", CASTHOOK(shoes_app_set_cache), 1);
 
     cDialog = rb_define_class_under(cTypes, "Dialog", cApp);
 
