@@ -23,8 +23,9 @@
     to use it. When net/http and open_uri is too confusing, arcane and limiting. 
     On Windows it's not faster (or slower) - just better in other ways. 
     see https://github.com/typhoeus/typhoeus
-  * Method app.resize can progromaticly expand the window.
+  * Method app.resize can programaticly expand the window.
     see https://github.com/Shoes3/shoes3/issues/370
+  * can enable/disable image cache #377, #323
   
 === Fixed with 3.3.4
   * When Shoes is installed on a system with existing rvm/rbenv it
@@ -33,6 +34,7 @@
     Ruby/Windows (net/http) ssl problems remain unfixed.
   * Improved Windows downloading speed - still sub-par but better than
     before. 
+  * some downloaded images don't have an etag (cough, manual Image example)
 
 === Developer issues with 3.3.4
   * rake does a better job of dealing with changes in lib/shoes/*.rb, static/manual-en.txt
